--- a/order/build.gradle
+++ b/order/build.gradle
@@ -24,9 +24,9 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
-	implementation 'org.springframework.boot:spring-boot-starter-amqp'
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0'
-	implementation 'com.github.kkuegler:human-readable-ids-java:0.4'
+	implementation 'org.springframework.kafka:spring-kafka'
+	implementation 'com.github.kkuegler:human-readable-ids-java:0.3'
 	compileOnly 'org.projectlombok:lombok'
 	compileOnly("org.springframework.boot:spring-boot-devtools")
 	annotationProcessor 'org.projectlombok:lombok'
