--- a/order/src/main/resources/application.yaml
+++ b/order/src/main/resources/application.yaml
@@ -7,6 +7,13 @@ server:
 spring:
   application:
     name: order
+  kafka:
+    bootstrap-servers: localhost:29092
+    producer:
+      value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
+  jackson:
+    serialization:
+      write-dates-as-timestamps: false
   # rabbitmq:
   #   listener:
   #     simple:
